8217731: Font rendering and glyph spacing changed from jdk-8 to jdk-11

Reviewed-by: serb, neugens